--- a/scss/components/_restaurant.scss
+++ b/scss/components/_restaurant.scss
@@ -32,6 +32,10 @@
 
     &__content {
         gap: 30px;
+
+        @include tablet {
+            flex-wrap: wrap;
+        }
     }
 
     &__skill {
@@ -106,6 +110,14 @@
 
     &__time {
         margin-right: 6px;
+
+        @include for-desktop {
+            font-size: 12px;
+        }
+
+        @include tablet {
+            font-size: 10px;
+        }
     }
 
     &__rating {
