--- a/scss/components/_reviews.scss
+++ b/scss/components/_reviews.scss
@@ -22,7 +22,7 @@
         &--inner {
             padding: 38px 43px;
 
-            @include tablet {
+            @include for-desktop {
                 padding: 30px 33px;
             }
         }
@@ -32,7 +32,7 @@
             align-items: center;
             margin-bottom: 30px;
 
-            @include tablet {
+            @include for-desktop {
                 margin-bottom: 20px;
             }
         }
@@ -50,7 +50,7 @@
                 margin-bottom: 28px;
             }
 
-            @include tablet {
+            @include for-desktop {
                 font-size: 12px;
                 margin-bottom: 22px;
             }
@@ -77,7 +77,7 @@
             font-size: 18px;
         }
 
-        @include tablet {
+        @include for-desktop {
             font-size: 14px;
             line-height: 20px;
         }
@@ -94,7 +94,7 @@
             font-size: 15px;
         }
 
-        @include tablet {
+        @include for-desktop {
             font-size: 12px;
             line-height: 16px;
         }
