--- a/scss/components/_subscribe.scss
+++ b/scss/components/_subscribe.scss
@@ -22,7 +22,7 @@
             padding: 26px 51px 0 46px;
         }
 
-        @include tablet {
+        @include for-desktop {
             height: 200px;
             padding: 24px 40px 0 40px;
         }
@@ -41,7 +41,7 @@
                 font-size: 55px;
             }
 
-            @include tablet {
+            @include for-desktop {
                 font-size: 50px;
             }
         }
@@ -52,7 +52,7 @@
         height: 196px;
         margin-top: 110px;
 
-        @include tablet {
+        @include for-desktop {
             margin-top: 70px;
         }
     }
@@ -75,7 +75,7 @@
                 font-size: 15px;
             }
 
-            @include tablet {
+            @include for-desktop {
                 padding: 16px 165px 16px 16px;
                 font-size: 12px;
             }
@@ -100,7 +100,7 @@
                 font-size: 14px;
             }
 
-            @include tablet {
+            @include for-desktop {
                 top: 4px;
                 right: 5px;
                 font-size: 12px;
