--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -71,7 +71,7 @@
         border-radius: 12px;
     }
 
-    @include tablet {
+    @include for-desktop {
         padding: 8px 15px;
         font-size: 11px;
         border-radius: 12px;
